--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "patch-package",
+    "release-android": "react-native run-android --variant=release"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.19.6",
+    "@bam.tech/react-native-image-resizer": "^3.0.11",
     "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/geolocation": "^3.0.5",
@@ -29,13 +32,16 @@
     "link": "^1.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "patch-package": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-native": "^0.70.6",
     "react-native-device-info": "^10.3.0",
     "react-native-element-dropdown": "^2.5.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^4.10.3",
+    "react-native-image-size": "1.1.6",
     "react-native-link": "^4.1.0",
     "react-native-maps": "^1.4.0",
     "react-native-maps-directions": "^1.9.0",
@@ -50,7 +56,8 @@
     "react-redux": "^8.0.5",
     "realm": "^11.0.0-rc.2",
     "redux": "^4.2.0",
-    "redux-saga": "^1.2.1"
+    "redux-saga": "^1.2.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
